tests/cases/compiler-development/artifact/errors/diagnostic-generic-return-context-uninferred.diagnostic
diagnostic error code=T0001 family=type message="generic type 'T' could not be inferred for 'make_value'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-return-context-uninferred.ari" display="tests/cases/generics/errors/generic-return-context-uninferred.ari" bytes=111
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-return-context-uninferred.ari" line=6 column=20 end_line=6 end_column=30 byte_start=79 byte_end=89 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-return-context-uninferred.ari:6:20\n   |\n 6 |   let value: i64 = make_value();\n   |                    ^^^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-return-context-uninferred.ari" line=1 column=15 end_line=1 end_column=16 byte_start=14 byte_end=15 message="generic parameter 'T' must be resolved before specialization"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-return-context-uninferred.ari:1:15\n   |\n 1 | fn make_value[T]() -> T {\n   |               ^"
  Note index=0 location=none message="generic function specialization requires every type parameter to have one concrete type"
  Help index=0 location=none message="pass an explicit type argument for 'T' or add a value argument that fixes it"
